logs/firmant.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Firmant-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/firmant'...
Compiling './lib/python3.5/site-packages/firmant/du.py'...
***   File "./lib/python3.5/site-packages/firmant/du.py", line 235
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/firmant/parsers'...
Compiling './lib/python3.5/site-packages/firmant/parsers/feeds.py'...
***   File "./lib/python3.5/site-packages/firmant/parsers/feeds.py", line 118
    [pytz.utc.localize(datetime.datetime(1900, 01, 01))])
                                                ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/firmant/routing'...
Listing './lib/python3.5/site-packages/firmant/templates'...
Listing './lib/python3.5/site-packages/firmant/templates/posts'...
Listing './lib/python3.5/site-packages/firmant/templates/sideboxes'...
Listing './lib/python3.5/site-packages/firmant/utils'...
Compiling './lib/python3.5/site-packages/firmant/utils/paths.py'...
***   File "./lib/python3.5/site-packages/firmant/utils/paths.py", line 127
    except OSError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/firmant/writers'...
Compiling './lib/python3.5/site-packages/firmant/writers/static.py'...
***   File "./lib/python3.5/site-packages/firmant/writers/static.py", line 99
    except OSError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
